crates/integration-tests/src/tests/snapshots/integration_tests__tests__filtering__filters_by_array_comparison_is_empty.snap
---
source: crates/integration-tests/src/tests/filtering.rs
expression: "run_connector_query(Connector::SampleMflix,\nquery_request().collection(\"movies\").query(query().predicate(is_empty(target!(\"writers\"))).fields([field!(\"writers\")]).limit(1),)).await?"
---
- rows:
    - writers: []
