crates/integration-tests/src/tests/snapshots/integration_tests__tests__filtering__filters_by_comparison_with_a_variable.snap
---
source: crates/integration-tests/src/tests/filtering.rs
expression: "run_connector_query(Connector::SampleMflix,\nquery_request().variables([[(\"title\",\n\"The Blue Bird\")]]).collection(\"movies\").query(query().predicate(binop(\"_eq\",\ntarget!(\"title\"), variable!(title))).fields([field!(\"title\")]),)).await?"
---
- rows:
    - title: The Blue Bird
