crates/integration-tests/src/tests/snapshots/integration_tests__tests__filtering__filters_by_comparisons_on_elements_of_array_field.snap
---
source: crates/integration-tests/src/tests/filtering.rs
expression: "graphql_query(r#\"\n            query {\n              testCases_nestedCollection(\n                where: { staff: { name: { _eq: \"Freeman\" } } }\n                order_by: { institution: Asc }\n              ) {\n                institution\n              }\n            }\n            \"#).run().await?"
---
data:
  testCases_nestedCollection:
    - institution: Black Mesa
    - institution: City 17
errors: ~
